Fix smooth scrolling on iOS

--- a/styles/shrekjr.styl
+++ b/styles/shrekjr.styl
@@ -48,10 +48,11 @@ nav
 
 .content-wrapper
     height: 100vh
-    overflow-y: auto
+    overflow-y: scroll
     margin-top: 48px
     max-width: 650px
     scroll-behavior: smooth
+    -webkit-overflow-scrolling: touch
     .content-bg
         background: rgb(242,245,226)
         background: linear-gradient(180deg, rgba(242,245,226,1) 50%, rgba(211,217,141,1) 75%, rgba(185,194,68,1) 100%)
